max-width to avoid overflow on textarea resize

--- a/scss/components/form/_input.scss
+++ b/scss/components/form/_input.scss
@@ -41,6 +41,7 @@ $label-margin:           .3rem !default;
 
     display: block;
     width: 100%;
+    max-width: 100%;
     min-height: $input-height;
 
     color: $input-color;
